[tool.poetry]
name = "stepy"
version = "0.1.0"
description = ""
authors = ["Shparki <murrmat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10.44"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4.4"
pydocstyle = "^5.0.1"
awscli = "^1.16.308"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
